# es-lsp

./: .gitignore  README.md  emscripten.txt  meson.build
.github/workflows/: main.yml
include/: DataNode.h  definitions.h  log.h  lsp.h  mfunction.h  sajson.h  threadpool.h  utils.h
include/fmt/: core.h
src/: DataNode.cpp  definitions.cpp  log.cpp  lsp.cpp  main.cpp  threadpool.cpp  utils.cpp
src/simdjson/: simdjson.cpp
tests/: tests.cpp
